--- a/src/blocks/patterns/form.css
+++ b/src/blocks/patterns/form.css
@@ -9,7 +9,8 @@
 /* Form item */
 .form__item {
     display: flex;
-    flex: row wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .form__item_border_bottom:not(:last-child) {
