--- a/src/blocks/patterns/list.css
+++ b/src/blocks/patterns/list.css
@@ -9,7 +9,8 @@
 /* List item */
 .list__item {
     display: flex;
-    flex: row wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .list__item_border_bottom:not(:last-child) {
